Bug : fixing textbox spacing

--- a/css/app.css
+++ b/css/app.css
@@ -131,7 +131,7 @@ h1 {
     padding: 0;
     text-align: center;
     border: 1px solid #888;
-    width: 40%;
+    width: 30%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -177,4 +177,9 @@ h1 {
     padding: 2px 16px;
     background-color: #1a237e;
     color: white;
+}
+
+.nno-space {
+    padding: 0;
+    margin:0;
 }
